# nowires-rust

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/api-rs/: Cargo.toml
apps/api-rs/src/: antenna.rs  error.rs  fresnel.rs  itm_bridge.rs  main.rs  models.rs  rounding.rs  signal_levels.rs  terrain.rs
apps/api-rs/src/coverage/: mod.rs  radius.rs  render.rs  workers.rs
apps/api-rs/src/elevation/: fetch.rs  grid.rs  mod.rs
apps/api-rs/src/models/: response.rs
apps/api-rs/src/routes/: coverage.rs  coverage_radius.rs  mod.rs  p2p.rs
apps/web/: .env.local.example  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/components/: Dialogs.tsx
apps/web/src/components/coverage/: CoveragePanel.tsx  CoverageResults.tsx  FormField.tsx  Legend.tsx  SelectField.tsx  SitesPanel.tsx  coverageForm.ts
apps/web/src/components/map/: MapView.tsx
apps/web/src/components/p2p/: P2PPanel.tsx  P2PResult.tsx  ProfileChart.tsx
apps/web/src/lib/: api.ts  options.ts  radio.ts  site.ts  types.ts
apps/web/src/lib/__tests__/: radio.test.ts  site.test.ts
